[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python"
version = "1.0.0"
description = "le_big_dump"
authors = [
	{ name = "Jonas Sundstrom", email = "jonas@kirilla.se" }
]
license = { file = "LICENSE" }
dependencies = [
	"argparse",
	"pyfiglet",
	"requests",
	"scapy",
] 
classifiers = [
	# classifiers?
]

[project.entry-points.console_scripts]
argparser = "argparser.main:main"
argsys = "argsys.main:main"
arp_network_scanner = "arp_network_scanner.main:main"
curl2python = "curl2python.main:main"
hello = "hello.main:main"
portscanner = "portscanner.main:main"
todo = "todo.todo:main"
web_directory_enumeration = "web_directory_enumeration.main:main"
web_downloader = "web_downloader.main:main"
web_subdomain_enumeration = "web_subdomain_enumeration.main:main"
weblogin = "weblogin.main:main"
weblogin_curl2python = "weblogin_curl2python.main:main"
weblogin_wordpress = "weblogin_worpress.main:main"
webmin_exploit = "webmin_exploit.main:main"
wordlist_maker = "wordlist_maker.wordlist_maker:main"
